# king-of-the-castle

./: .env  .gitignore  Cargo.toml  Dockerfile.client  Dockerfile.server  LICENSE  README.md  docker-compose.yml  index-9b836d3608ba979f.js  index.html  style-d423dd0bfa650599.css  wait-for-it.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  code-check.yml  docker-image.yml
client/: Cargo.toml  index.html  style.css
client/kotc_reqwasm/: Cargo.toml
client/kotc_reqwasm/src/: endpoints.rs  lib.rs  server_structs.rs  ws_onmessage.rs  ws_send.rs  ws_structs.rs
client/src/: components.rs  header.rs  main.rs  pages.rs  router.rs
client/src/components/: game.rs  header.rs  pages.rs
client/src/components/game/: card.rs  column.rs  end_popup.rs  logs.rs  token.rs
client/src/components/pages/: headstone.rs  home.rs  lobby.rs  login.rs  not_found.rs  register.rs
client/src/game-components/: cards.rs  columns.rs
client/src/pages/: game.rs  home.rs  lobby.rs  login.rs  not_found.rs  register.rs
kotc_commons/: Cargo.toml
kotc_commons/src/: lib.rs  messages.rs
kotc_commons/src/messages/: message_types.rs
server/: Cargo.toml  docker-compose.yml
server/kotc_actix/: Cargo.toml
server/kotc_actix/src/: handlers.rs  kotc_messages.rs  kotc_ws_server.rs  kots_ws_session.rs  lib.rs  lobby.rs
server/kotc_database/: Cargo.toml
server/kotc_database/diagrams/: erd_diagram.plantuml
server/kotc_database/migrations/2022-01-27-021212_create_tables/: down.sql  up.sql
server/kotc_database/src/: lib.rs  models.rs  repo.rs  schema.rs
server/kotc_database/src/repo/: game_repo.rs  participation_repo.rs  user_repo.rs
server/kotc_game/: Cargo.toml
server/kotc_game/src/: game.rs  lib.rs
server/kotc_game/src/game/: card.rs  column.rs  player.rs  utils.rs  ws_messages.rs
server/kotc_oauth/: Cargo.toml
server/kotc_oauth/src/: lib.rs
server/src/: game.rs  main.rs
server/src/game/: card.rs  column.rs  player.rs  token.rs  utils.rs
server/tests/: db_test.rs  game_test.rs
