[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kotc_reqwasm = { path = "kotc_reqwasm" }
serde = "1.0.136"
serde_json = "1.0.78"
yew = "0.19"
yew-router = "0.16"
yew-agent = "0.1.0"
yewdux = "0.7"
yewdux-functional = "0.1.0"
wasm-logger = "0.2.0"
log = "0.4.14"
gloo-storage = "0.2.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "Node",
    "Window",
    "HtmlCollection",
    "HtmlInputElement",
]
