[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.2.0"
actix-rt = "2.6.0"
kotc_actix = { path = "./kotc_actix" }
kotc_database = { path = "./kotc_database" }
kotc_game = { path = "./kotc_game" }
chrono = { version = "0.4.19", features = ["serde"] }
anyhow = "1.0.8"
