[package]
name = "kotc_reqwasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwasm = "0.4.0"
futures = "0.3.19"
wasm-bindgen-futures = "0.4.29"
console_log = "0.2.0"
log = "0.4.14"
gloo-timers = "0.2.3"
