[package]
name = "kotc_actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.2.0"
actix = "0.10.0"
actix-web-actors = "3"
kotc_database = { path = "../kotc_database" }
serde = "1.0.136"
pwhash = "1.0.0"
rand = "0.8.4"
