[package]
name = "kotc_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
anyhow = "1.0.8"
chrono = { version = "0.4.19", features = ["serde"] }
async-trait = "0.1.51"
serde = { version = "1.0", features = [ "derive" ] }
