[package]
name = "kotc_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.8"
chrono = { version = "0.4.19", features = ["serde"] }
kotc_database = { path = "../kotc_database" }
rand = "0.8.4"
itertools = "0.10.1"
